# calculat0x0r

./: CMakeLists.txt  README.md
include/: custom_datatypes.h  datatype_assessment.c  datatype_assessment.h  lowlevel_functions.c  lowlevel_functions.h
src/: main.c
